[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
graphql_client = "0.12.0"
llm-chain = "0.8.2"
llm-chain-openai = "0.8.2"
openai-api-rs = "0.1.6"
tokio = { version = "1.28.0", features = ["full"] }
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.29.0", features = ["bundled"] }
walkdir = "2"
markdown = "1.0.0-alpha.11"
anyhow = "1.0.72"
